--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, user-scalable=1, minimal-ui"/>
-    <title>Tin vui cho eSports Việt Nam, Mobile Legends: Bang Bang có nhà phát hành mới</title>
+    <title>Đội trưởng team Phoenix nghi vấn bán độ tại chung kết VCS 2024 Mùa Hè</title>
     <meta name="description" content="Ngày 27.6.2024, tại Hà Nội, Công ty Cổ phần Funtap (Funtap Games) đã công bố cùng với MOONTON Games trở thành nhà phát hành mới của bộ môn thể thao điện tử Mobile Legends: Bang Bang (MLBB) tại Việt Nam.">
     <meta name="keywords" content="Esports, Việt Nam, VIRESA, FunTap, games">
     <meta name="news_keywords" content="Esports, Việt Nam, VIRESA, FunTap, games">
@@ -12,7 +12,7 @@
     <meta property="og:description" content="Ngày 27.6.2024, tại Hà Nội, Công ty Cổ phần Funtap (Funtap Games) đã công bố cùng với MOONTON Games trở thành nhà phát hành mới của bộ môn thể thao điện tử Mobile Legends: Bang Bang (MLBB) tại Việt Nam.">
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://thanhnien.vn/tin-vui-cho-esports-viet-nam-mobile-legends-bang-bang-co-nha-phat-hanh-moi-185240628105951934.htm" />
-    <meta property="og:image" content="https://images2.thanhnien.vn/zoom/600_315/528068263637045248/2024/6/28/thumb-1719546779764889624892-30-0-655-1000-crop-17195468063891014922858.jpg" />
+    <meta property="og:image" content="photo/danh.jpg" />
     <meta property="og:image:type" content="image/jpg" />
     <meta property="og:image:width" content="600" />
     <meta property="og:image:height" content="315" />
