--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://thanhnien.vn/tin-vui-cho-esports-viet-nam-mobile-legends-bang-bang-co-nha-phat-hanh-moi-185240628105951934.htm" />
     <meta property="og:image" content="photo/danh.jpg" />
-    <meta property="og:image:type" content="image/jpg" />
+    <meta property="og:image:type" content="photo/danh.jpg" />
     <meta property="og:image:width" content="600" />
     <meta property="og:image:height" content="315" />
     <meta property="twitter:image" content="https://images2.thanhnien.vn/zoom/600_315/528068263637045248/2024/6/28/thumb-1719546779764889624892-30-0-655-1000-crop-17195468063891014922858.jpg" />
