--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <meta property="og:description" content="Ngày 27.6.2024, tại Hà Nội, Công ty Cổ phần Funtap (Funtap Games) đã công bố cùng với MOONTON Games trở thành nhà phát hành mới của bộ môn thể thao điện tử Mobile Legends: Bang Bang (MLBB) tại Việt Nam.">
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://thanhnien.vn/tin-vui-cho-esports-viet-nam-mobile-legends-bang-bang-co-nha-phat-hanh-moi-185240628105951934.htm" />
-    <meta property="og:image" content="photo/danh.jpg" />
-    <meta property="og:image:type" content="photo/danh.jpg" />
+    <meta property="og:image" content="photo/danh.JPG" />
+    <meta property="og:image:type" content="photo/danh.JPG" />
     <meta property="og:image:width" content="600" />
     <meta property="og:image:height" content="315" />
-    <meta property="twitter:image" content="photo/danh.jpg" />
+    <meta property="twitter:image" content="photo/danh.JPG" />
     <meta property="twitter:card" content="summary_large_image" />
     <link rel="canonical" href="https://thanhnien.vn/tin-vui-cho-esports-viet-nam-mobile-legends-bang-bang-co-nha-phat-hanh-moi-185240628105951934.htm"/>
     <meta prefix="fb: http://ogp.me/ns/fb#" property="fb:app_id" content="403237164337145" />
