--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="vi">
 <head>
@@ -1131,7 +1132,7 @@
     </div>
 </div>
 
-               <h2 class="detail-sapo" data-role="sapo">Thành phố Hồ Chí Minh, ngày 24 tháng 6 năm 2024 – Cộng đồng Liên Minh Huyền Thoại Việt Nam đang xôn xao trước nghi vấn đội trưởng Team Phoenix, Khôi, cố tình thi đấu dưới sức trong trận Chung kết VCS Mùa Hè 2024 diễn ra ngày 23 tháng 6.<a class="VCCAutoLink link-inline-content" data-id-autolink="8088" href="https://thanhnien.vn/ha-noi-tags485917.html" target="_blank" title="Hà Nội"></a>
+               <h2 class="detail-sapo" data-role="sapo">Thành phố Hồ Chí Minh, ngày 24 tháng 6 năm 2024 – Cộng đồng Liên Minh Huyền Thoại Việt Nam đang xôn xao trước nghi vấn tuyển thủ Trần Đăng Khôi (Leader Team Phoenix), cố tình thi đấu dưới sức trong trận Chung kết VCS Mùa Hè 2024 diễn ra ngày 23 tháng 6.<a class="VCCAutoLink link-inline-content" data-id-autolink="8088" href="https://thanhnien.vn/ha-noi-tags485917.html" target="_blank" title="Hà Nội"></a>
                 <a class="VCCAutoLink link-inline-content" data-id-autolink="7433" href="https://thanhnien.vn/the-thao.htm" target="_blank" title="thể thao"></a></h2>
                         <div class="detail-cmain">
                 <div class="detail-content afcbc-body" data-role="content" itemprop="articleBody" data-io-article-url="https://thanhnien.vn/tin-vui-cho-esports-viet-nam-mobile-legends-bang-bang-co-nha-phat-hanh-moi-185240628105951934.htm">
